# sctgdesk-api-server

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  db_v2.sqlite3  db_v2.sqlite3-shm  oauth2.toml  package-lock.json  s3config.toml  swagger-codegen.sh
.github/: FUNDING.yml
.github/workflows/: build.yaml  macos-build.yml  main.yml  ubuntu.yml  windows.yml
db_v2/create/: db.sql
db_v2/wip/: queries.sql
docs/: index.html  openapi3.json  openapisnippet.min.js  openapisnippet.min.js.map  sctgdesk-server.min.js  sctgdesk-server.min.js.map
libs/oauth2/: Cargo.toml
libs/oauth2/src/: dex_provider.rs  errors.rs  github_provider.rs  lib.rs  oauth2_provider.rs  oauth_provider.rs
libs/s3software/: Cargo.toml
libs/s3software/src/: lib.rs
libs/state/: Cargo.toml  build.rs
libs/state/src/: bearer.rs  database.rs  lib.rs  password.rs  state.rs  types.rs
libs/utils/: Cargo.toml
libs/utils/src/: address_book.rs  bearer.rs  get_host.rs  lib.rs  tokens.rs  types.rs
rapidoc/: index.html  index.ts  openapi-snippet.d.ts  openapi3.ts  openapisnippet.min.js  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
src/: api.rs  extended_json.rs  extended_request.rs  lib.rs  main.rs
webconsole/: .gitignore  .npmrc  LICENSE.md  README.md  devserver.js  gulpfile.js  index.html  package-lock.json  package.json  postcss.config.js  setlicenserust.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
webconsole/public/: browserconfig.xml
webconsole/src/: App.vue  index.scss  main.ts  shims-vue.d.ts
webconsole/src/api/: README.md  api.ts  base.ts  configuration.ts  index.ts  openapi.json  package.json
webconsole/src/api/apis/: address-book-api.ts  address-book-legacy-api.ts  cors-api.ts  group-api.ts  login-api.ts  peer-api.ts  software-api.ts  todo-api.ts  user-api.ts  web-console-api.ts  webconsole-api.ts
webconsole/src/api/models/: ab-get-response.ts  ab-peer.ts  ab-peers-response.ts  ab-personal.ts  ab-profile.ts  ab-request.ts  ab-rule-add-request.ts  ab-rule-delete-request.ts  ab-rule.ts  ab-rules-response.ts  ab-settings-response.ts  ab-shared-add-request.ts  ab-shared-name-request.ts  ab-shared-profiles-response.ts  ab-tag-rename-request.ts  ab-tag.ts  add-goup-request.ts  add-user-request.ts  audit-request.ts  cpu-count.ts  current-user-request.ts  current-user-response.ts  delete-user-request.ts  enable-user-request.ts  group.ts  groups-response.ts  heartbeat-request.ts  index.ts  login-reply.ts  login-request.ts  logout-reply.ts  oidc-auth-request.ts  oidc-auth-url.ts  oidc-device-info.ts  oidc-response.ts  oidc-settings-response.ts  oidc-user-info.ts  oidc-user.ts  peer-info.ts  peer.ts  (+13 more)
webconsole/src/components/: AccessibleAddressBooks.vue  AddGroup.vue  AddRule.vue  AddSharedAddressBook.vue  AddUser.vue  AddressBook.vue  BasicCard.vue  ClipboardButton.vue  DashboardCard.vue  DevicesCard.vue  EditAddressBook.vue  EditGroup.vue  EditUser.vue  FlipCard.vue  FlipClock.vue  GithubButton.vue  GroupsCard.vue  Modal.vue  UsersCard.vue  ViewRules.vue
webconsole/src/config/: StructuredLDJson.ts
webconsole/src/footers/: mainfooter.vue
webconsole/src/stores/: sctgDeskStore.ts  versionsStore.ts
webconsole/src/utilities/: api.ts  avatar.ts  viteHelper.ts
webconsole/src/views/: IndexPage.vue  LoginPage.vue
