[package]
name = "sctgdesk-api-server"
version = "1.1.99-43"
edition = "2021"
build = "build.rs"
# [workspace]
# members = [
#     "libs/utils",
#     "libs/state",
#     "libs/oauth2"
# ]

[dependencies]
log = "0.4"
include_dir = "0.7"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
rocket = { version = "0.5", features = ["json", "secrets"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json"] }
rocket_okapi = { version = "0.8", features = [ "rapidoc", "swagger" ]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
state = { path = "libs/state" }
utils = { path = "libs/utils" }
oauth2 = { path = "libs/oauth2" }
s3software = { path = "libs/s3software" }
uuid = { version = "1.10", features = ["v4"] }
base64 = "0.22"
url = { version = "2", features = ["serde"] }
urlencoding = "2.1"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"