[package]
name = "s3software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.3"
aws-sdk-s3 = "1.25"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.12" }