[package]
name = "state"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
utils = { path = "../utils" }
oauth2 = { path = "../oauth2" }
log = "0.4"
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
rocket = { version = "0.5", features = ["json"] }
rocket_okapi = { version = "0.8", features = [ "rapidoc" ]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "json"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "json"] }