[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
rocket = { version = "0.5.0", features = ["json", "tls", "secrets"] }
tracing = "0.1"
rand = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
rocket_okapi = { version = "0.8", features = [ "rapidoc" ]}
chrono = { version = "0.4", features = ["serde"]}
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "json"] }
url = { version = "2.3", features = ["serde"] }
oauth2 = { path = "../oauth2" }